- Implemented the binwidths property of ndhist (w/o the under and overflow
  bins).

- Make the addition of oor bins optional in the axes utility functions.

- Implemented the bincenters property of ndhist (w/o the possible under and
  overflow bins).

- Drop support for integer axis values, because bin centers cannot be
  represented by integer values.

- Adjusted the binedges property to exclude possible under- and overflow bins.

- Implemented the *base* property of ndhist that refers to the ndhist object
  when the ndhist object is a view into that. This maked the owner property of
  ndarray_storage obsolete. This is actually important for object bin arrays,
  where the elements need to be deref'ed by the correct ndhist object, ie. the
  base.

- Scalarized the return value of binentries, bincontent, and squaredweights
  properties if the ndhist object is a zero-dimensional histogram.

- Implemented the basic slicing of ndhist according to numpy basic slicing
  rules. Basic slicing produces always a data view. Thus, ndhist objects that
  are views (can be checked through the *is_view* property), don't have under-
  and overflow bins. Although, they might be views into the original under- and
  overflow bins. In case the ndhist is a data view, the *base* property is set
  to that ndhist object.

- Reimplemented the project method of the ndhist class to handle the new
  out-of-range bin scheme.

- Overloaded the arithmetic operators of the ndhist class for all (excluding
  boost::python::object) supported weight types.

- Implemented the unit test "oor_bin_copies_test" to actually check if the
  underflow, etc. properties of ndhist return deep copies.

- If the bin content array is an object array, the underflow, overflow,
  underflow_squaredweights, and overflow_squaredweights properties of ndhist
  make a deepcopy (using BoostNumpy's ndarray.deepcopy method) of their returned
  ndarrays, so that the objects are also copied.

- The properties
      - underflow,